# coretrace-qt

./: CMakeLists.txt  Doxyfile  Makefile  README.md  app-image-builder.sh  build.sh  check-appimage.sh  clean.sh  copy_qt_libs.sh  coretrace-qt  coretrace-qt.pro  ctrace-cli.c  index.html  main.c  moc_cli_options_dialog.cpp  resources.qrc  test-appimage-build.sh  validate-build-env.sh  version.json
CTraceQt.AppDir/: .DirIcon  AppRun  coretrace-qt.desktop
api/: annotated.html  audit__cache_8cpp.html  audit__cache_8hpp.html  audit__cache_8hpp_source.html  audit__factory_8cpp.html  audit__factory_8hpp.html  audit__factory_8hpp_source.html  audit__result_8cpp.html  audit__result_8hpp.html  audit__result_8hpp_source.html  audit__results__view_8cpp.html  audit__results__view_8hpp.html  audit__results__view_8hpp_source.html  audit__service_8cpp.html  audit__service_8hpp.html  audit__service_8hpp_source.html  classAuditCache-members.html  classAuditCache.html  classAuditFactory-members.html  classAuditFactory.html  classAuditResult-members.html  classAuditResult.html  classAuditResultsView-members.html  classAuditResultsView.html  classAuditResultsView.js  classAuditService-members.html  classAuditService.html  classCTraceCLI-members.html  classCTraceCLI.html  classCliOptionsDialog-members.html  classCliOptionsDialog.html  classCliOptionsPanel-members.html  classCliOptionsPanel.html  classCppHighlighter-members.html  classCppHighlighter.html  classErrorHighlighter-members.html  classErrorHighlighter.html  classFileTreeView-members.html  classFileTreeView.html  classIDE-members.html  (+84 more)
includes/: MainBoard.hpp  audit_cache.hpp  audit_factory.hpp  audit_result.hpp  audit_results_view.hpp  audit_service.hpp  cli_options_dialog.hpp  cli_options_panel.hpp  ctrace_cli.hpp  error_highlighter.hpp  file_tree_view.hpp  ide.hpp  line_number_area.hpp  main_window.hpp  output_display.hpp  parser.hpp  project.hpp  project_manager.hpp  syntax_highlighter.hpp  ui_component.hpp  update_observer.hpp  update_service.hpp
src/: audit_cache.cpp  audit_factory.cpp  audit_result.cpp  audit_results_view.cpp  audit_service.cpp  cli_options_dialog.cpp  cli_options_panel.cpp  ctrace_cli.cpp  error_highlighter.cpp  file_tree_view.cpp  ide.cpp  (+9 more)
(+245 files in other folders)
